# api/src/models/computes.py
@@ -177,6 +177,10 @@ class ComputeRegistryResponse(BaseModel):
 
     # Metadata
     name: str
+    compute_version: str | None
+
+    # Live overview
+    live_version: str | None = None
 
     # Gateway
     gateway_url: str
